// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";
package org.example.service;

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

option java_outer_classname = "ServiceOuterClass";

service MyService {
  option (kalix.codegen) = {
    action: {
      name: "MyServiceNamedAction"
    }
  };

  rpc simpleMethod(MyRequest) returns (google.protobuf.Empty) {}
  rpc streamedOutputMethod(MyRequest) returns (stream google.protobuf.Empty) {}
  rpc streamedInputMethod(stream MyRequest) returns (google.protobuf.Empty) {}
  rpc fullStreamedMethod(stream MyRequest) returns (stream google.protobuf.Empty) {}
}

message MyRequest {}